Добавлено позиционирование контента

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="advantages-1">
             <li class="advantages-card">
               <div class="advantages">
-                <img src="./images/advantages-1.jpg" alt="Антена" />
+                <img class="img-advantages" src="./images/advantages-1.jpg" alt="Антена" />
               </div>
               <h3 class="h3-advantages">Внимание к деталям</h3>
               <p class="about-advantages">
@@ -66,7 +66,7 @@
           <div class="advantages-2">
             <li class="advantages-card">
               <div class="advantages">
-                <img src="./images/advantages-2.jpg" alt="Часы" />
+                <img class="img-advantages" src="./images/advantages-2.jpg" alt="Часы" />
               </div>
               <h3 class="h3-advantages">Пунктуальность</h3>
               <p class="about-advantages">
@@ -78,7 +78,7 @@
           <div class="advantages-3">
             <li class="advantages-card">
               <div class="advantages">
-                <img src="./images/advantages-3.jpg" alt="Диаграма" />
+                <img class="img-advantages" src="./images/advantages-3.jpg" alt="Диаграма" />
               </div>
               <h3 class="h3-advantages">Планирование</h3>
               <p class="about-advantages">
@@ -90,7 +90,7 @@
           <div class="advantages-4">
             <li>
               <div class="advantages">
-                <img src="./images/advantages-4.jpg" alt="Космонавт" />
+                <img class="img-advantages" src="./images/advantages-4.jpg" alt="Космонавт" />
               </div>
               <h3 class="h3-advantages">Современные технологии</h3>
               <p class="about-advantages">
@@ -161,7 +161,7 @@
                   height="260"
                 />
                 <h3 class="team">Николай Кучеренко</h3>
-                <p class="position-team">Product Designer</p>
+                <p class="position-team" lang="en">Product Designer</p>
                 <ul class="list-social-network">
                   <li class="social-network-element">
                     <a
@@ -212,7 +212,7 @@
                   height="260"
                 />
                 <h3 class="team">Ольга Иванова</h3>
-                <p class="position-team">Frontend Developer</p>
+                <p class="position-team" lang="en">Frontend Developer</p>
                 <ul class="list-social-network">
                   <li class="social-network-element">
                     <a
@@ -263,7 +263,7 @@
                   height="260"
                 />
                 <h3 class="team">Андрей Шевченко</h3>
-                <p class="position-team">Marketing</p>
+                <p class="position-team" lang="en">Marketing</p>
                 <ul class="list-social-network">
                   <li class="social-network-element">
                     <a
@@ -314,7 +314,7 @@
                   height="260"
                 />
                 <h3 class="team">Иван Николаев</h3>
-                <p class="position-team">UI Designer</p>
+                <p class="position-team" lang="en">UI Designer</p>
                 <ul class="list-social-network">
                   <li class="social-network-element">
                     <a
@@ -363,42 +363,31 @@
         <div class="clients-container">
           <h2 class="main-info">Постоянные клиенты</h2>
           <ul class="list-clients">
-            <div class="client-item-conteiner">
               <li class="client-item">
                 <a class="logo-client" href=""
                   ><img src="./images/logo_1.svg" alt=""
                 /></a>
               </li>
-            </div>
-            <div>
               <li class="client-item">
                 <a class="logo-client" href=""
                   ><img src="./images/logo_2.svg" alt=""
                 /></a>
               </li>
-            </div>
-            <div>
               <li class="client-item">
                 <a class="logo-client" href=""
                   ><img src="./images/logo_3.svg" alt=""
                 /></a>
               </li>
-            </div>
-            <div>
               <li class="client-item">
                 <a class="logo-client" href=""
                   ><img src="./images/logo_4.svg" alt=""
                 /></a>
               </li>
-            </div>
-            <div>
               <li class="client-item">
                 <a class="logo-client" href=""
                   ><img src="./images/logo_5.svg" alt=""
                 /></a>
               </li>
-            </div>
-            <div>
               <li class="client-item">
                 <a class="logo-client" href=""
                   ><img src="./images/logo_6.svg" alt=""
@@ -415,48 +404,48 @@
           <a class="logo-2" href="/"> <span class="web">Web</span>Studio </a>
           <address class="address-block">
             <p class="address">г. Киев, пр-т Леси Украинки,26</p>
-            <ul>
+            <ul class="contacts-footer-conteiner">
               <li><a class="contacts" href=""> info@example.com</a></li>
               <li><a class="contacts" href=""> +38 099 111 11 11</a></li>
             </ul>
           </address>
         </div>
+        <div class="social-link-container">
         <b class="join-in">Присоединяйтесь</b>
         <!--Hero секция-->
-        <div class="social-link-container">
-          <ul>
+          <ul class="social-link-list">
+            <div class="active-social-link">
             <li>
               <a
-                class="active-social-link"
                 href=""
                 aria-label="Ссылка на Instagram"
-                >Instagram</a
+                ><img src="./images/instagram.svg" alt="instagram" /></a
               >
-            </li>
+            </li></div>
+            <div class="active-social-link">
             <li>
               <a
-                class="active-social-link"
                 href=""
                 aria-label="Ссылка на Twitter"
-                >Twitter</a
+                ><img src="./images/twitter.svg" alt="Twitter" /></a
               >
-            </li>
+            </li></div>
+            <div class="active-social-link">
             <li>
               <a
-                class="active-social-link"
                 href=""
                 aria-label="Ссылка на Facebook"
-                >Facebook</a
+                ><img src="./images/facebook.svg" alt="Facebook" /></a
               >
-            </li>
-            <li>
+            </li></div>
+            <div class="active-social-link">
+              <li>
               <a
-                class="active-social-link"
                 href=""
                 aria-label="Ссылка на LinkedIn"
-                >LinkedIn</a
+                ><img src="./images/linkedin.svg" alt="LinkedIn" /></a
               >
-            </li>
+            </li></div>
           </ul>
         </div>
       </div>
