--- a/portfolio.html
+++ b/portfolio.html
@@ -68,168 +68,196 @@
           </ul>
         </div>
         <div class="list-work-container">
-          <ul class="gallery-list">
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-0.jpg"
-                    alt="Технокряк"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Технокряк</h2>
-                  <p class="list-work-type">Веб-сайт</p>
-                  <p class="list-work-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-1.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">
-                    Постер New Orlean vs Golden Star
-                  </h2>
-                  <p class="list-work-type">Дизайн</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-2.jpg"
-                    alt="Ресторан Seafood"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Ресторан Seafood</h2>
-                  <p class="list-work-type">Приложение</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-3.jpg"
-                    alt="Проект Prime"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Проект Prime</h2>
-                  <p class="list-work-type">Маркетинг</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-4.jpg"
-                    alt="Проект Boxes"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Проект Boxes</h2>
-                  <p class="list-work-type">Приложение</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-5.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Inspiration has no Borders</h2>
-                  <p class="list-work-type">Веб-сайт</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-6.jpg"
-                    alt="Издание Limited Edition"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Издание Limited Edition</h2>
-                  <p class="list-work-type">Дизайн</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-7.jpg"
-                    alt="Проект LAB"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Проект LAB</h2>
-                  <p class="list-work-type">Маркетинг</p>
-                </a>
-              </li>
-            </div>
-            <div class="list-work-element">
-              <li class="list-work-item">
-                <a href="">
-                  <img
-                    src="./images-2/port-8.jpg"
-                    alt="Growing Business"
-                    width="370"
-                  />
-                  <h2 class="list-work-name">Growing Business</h2>
-                  <p class="list-work-type">Приложение</p>
-                </a>
-              </li>
-            </div>
-          </ul>
+          <section class="work-projects">
+          <div class="gallery-list">
+            <ul class="gallery-ul">
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <div class="img-gallery">
+                  <a  class="link-work-element" href="">
+                    <img class="img-work-element" src="./images-2/port-0.jpg" alt="Технокряк" width="370"/></div>
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">Технокряк</h2>
+                      <p class="list-work-type">Веб-сайт</p>
+                    </div>
+                    <p class="list-work-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-1.jpg"
+                      alt="Постер New Orlean vs Golden Star"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">
+                        Постер New Orlean vs Golden Star
+                      </h2>
+                      <p class="list-work-type">Дизайн</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-2.jpg"
+                      alt="Ресторан Seafood"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">Ресторан Seafood</h2>
+                      <p class="list-work-type">Приложение</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-3.jpg"
+                      alt="Проект Prime"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">Проект Prime</h2>
+                      <p class="list-work-type">Маркетинг</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-4.jpg"
+                      alt="Проект Boxes"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">Проект Boxes</h2>
+                      <p class="list-work-type">Приложение</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-5.jpg"
+                      alt="Inspiration has no Borders"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name" lang="en">
+                        Inspiration has no Borders
+                      </h2>
+                      <p class="list-work-type">Веб-сайт</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-6.jpg"
+                      alt="Издание Limited Edition"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">Издание Limited Edition</h2>
+                      <p class="list-work-type">Дизайн</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-7.jpg"
+                      alt="Проект LAB"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name">Проект LAB</h2>
+                      <p class="list-work-type">Маркетинг</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+              <div class="list-work-element">
+                <li class="list-work-item">
+                  <a class="link-work-element" href="">
+                    <img
+                      src="./images-2/port-8.jpg"
+                      alt="Growing Business"
+                      width="370"
+                    />
+                    <div class="gallery-element">
+                      <h2 class="list-work-name" lang="en">Growing Business</h2>
+                      <p class="list-work-type">Приложение</p>
+                    </div>
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </div>
+          </section>
         </div>
       </section>
     </main>
     <footer class="background-footer">
-      <a class="logo-2" href="/"> <span class="web">Web</span>Studio </a>
-      <address>
-        <p class="address">г. Киев, пр-т Леси Украинки,26</p>
-        <ul>
-          <li><a class="contacts" href=""> info@example.com</a></li>
-          <li><a class="contacts" href=""> +38 099 111 11 11</a></li>
-        </ul>
-      </address>
-      <b class="join-in">Присоединяйтесь</b>
-      <!--Hero секция-->
-      <ul>
-        <li>
-          <a class="active-social-link" href="" aria-label="Ссылка на Instagram"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a class="active-social-link" href="" aria-label="Ссылка на Twitter"
-            >Twitter</a
-          >
-        </li>
-        <li>
-          <a class="active-social-link" href="" aria-label="Ссылка на Facebook"
-            >Facebook</a
-          >
-        </li>
-        <li>
-          <a class="active-social-link" href="" aria-label="Ссылка на LinkedIn"
-            >LinkedIn</a
-          >
-        </li>
-      </ul>
+      <div class="container-footer">
+        <div class="address-item">
+          <a class="logo-2" href="/"> <span class="web">Web</span>Studio </a>
+          <address class="address-block">
+            <p class="address">г. Киев, пр-т Леси Украинки,26</p>
+            <ul class="contacts-footer-conteiner">
+              <li><a class="contacts" href=""> info@example.com</a></li>
+              <li><a class="contacts" href=""> +38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-link-container">
+          <b class="join-in">Присоединяйтесь</b>
+          <!--Hero секция-->
+          <ul class="social-link-list">
+            <div class="active-social-link">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram"><img src="./images/instagram.svg" alt="instagram" /></a>
+              </li>
+            </div>
+            <div class="active-social-link">
+              <li>
+                <a href="" aria-label="Ссылка на Twitter"><img src="./images/twitter.svg" alt="Twitter" /></a>
+              </li>
+            </div>
+            <div class="active-social-link">
+              <li>
+                <a href="" aria-label="Ссылка на Facebook"><img src="./images/facebook.svg" alt="Facebook" /></a>
+              </li>
+            </div>
+            <div class="active-social-link">
+              <li>
+                <a href="" aria-label="Ссылка на LinkedIn"><img src="./images/linkedin.svg" alt="LinkedIn" /></a>
+              </li>
+            </div>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
