--- a/portfolio.html
+++ b/portfolio.html
@@ -38,186 +38,159 @@
       </ul>
     </header>
     <main>
-      <section class="section-gallery">
+      <div class="section-gallery">
         <h1 hidden>Галерея работ</h1>
         <div class="filter-button-container">
           <ul>
-            <div class="filter-button-item">
-              <li><button class="filter-button" type="button">Все</button></li>
-            </div>
-            <div class="filter-button-item">
-              <li>
-                <button class="filter-button" type="button">Веб-сайты</button>
-              </li>
-            </div>
-            <div class="filter-button-item">
-              <li>
-                <button class="filter-button" type="button">Приложения</button>
-              </li>
-            </div>
-            <div class="filter-button-item">
-              <li>
-                <button class="filter-button" type="button">Дизайн</button>
-              </li>
-            </div>
-            <div class="filter-button-item">
-              <li>
-                <button class="filter-button" type="button">Маркетинг</button>
-              </li>
-            </div>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Все</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Приложения</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Дизайн</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Маркетинг</button>
+            </li>
           </ul>
         </div>
-        <div class="list-work-container">
-          <section class="work-projects">
-          <div class="gallery-list">
-            <ul class="gallery-ul">
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <div class="img-gallery">
-                  <a  class="link-work-element" href="">
-                    <img class="img-work-element" src="./images-2/port-0.jpg" alt="Технокряк" width="370"/></div>
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">Технокряк</h2>
-                      <p class="list-work-type">Веб-сайт</p>
-                    </div>
-                    <p class="list-work-text">
+
+        <div class="gallery-list">
+          <ul class="gallery-ul">
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-0.jpg"
+                    alt="Технокряк"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Технокряк</h2>
+                <p class="list-work-type">Веб-сайт</p>
+              </div>
+              <!--<p class="list-work-text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
-                    </p>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-1.jpg"
-                      alt="Постер New Orlean vs Golden Star"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">
-                        Постер New Orlean vs Golden Star
-                      </h2>
-                      <p class="list-work-type">Дизайн</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-2.jpg"
-                      alt="Ресторан Seafood"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">Ресторан Seafood</h2>
-                      <p class="list-work-type">Приложение</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-3.jpg"
-                      alt="Проект Prime"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">Проект Prime</h2>
-                      <p class="list-work-type">Маркетинг</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-4.jpg"
-                      alt="Проект Boxes"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">Проект Boxes</h2>
-                      <p class="list-work-type">Приложение</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-5.jpg"
-                      alt="Inspiration has no Borders"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name" lang="en">
-                        Inspiration has no Borders
-                      </h2>
-                      <p class="list-work-type">Веб-сайт</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-6.jpg"
-                      alt="Издание Limited Edition"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">Издание Limited Edition</h2>
-                      <p class="list-work-type">Дизайн</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-7.jpg"
-                      alt="Проект LAB"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name">Проект LAB</h2>
-                      <p class="list-work-type">Маркетинг</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-              <div class="list-work-element">
-                <li class="list-work-item">
-                  <a class="link-work-element" href="">
-                    <img
-                      src="./images-2/port-8.jpg"
-                      alt="Growing Business"
-                      width="370"
-                    />
-                    <div class="gallery-element">
-                      <h2 class="list-work-name" lang="en">Growing Business</h2>
-                      <p class="list-work-type">Приложение</p>
-                    </div>
-                  </a>
-                </li>
-              </div>
-            </ul>
-          </div>
-          </section>
+                    </p>-->
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-1.jpg"
+                  alt="Постер New Orlean vs Golden Star"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="list-work-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-2.jpg"
+                  alt="Ресторан Seafood"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name">Ресторан Seafood</h2>
+                  <p class="list-work-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-3.jpg"
+                  alt="Проект Prime"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name">Проект Prime</h2>
+                  <p class="list-work-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-4.jpg"
+                  alt="Проект Boxes"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name">Проект Boxes</h2>
+                  <p class="list-work-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-5.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name" lang="en">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="list-work-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-6.jpg"
+                  alt="Издание Limited Edition"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name">Издание Limited Edition</h2>
+                  <p class="list-work-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img src="./images-2/port-7.jpg" alt="Проект LAB" width="370" />
+                <div class="gallery-element">
+                  <h2 class="list-work-name">Проект LAB</h2>
+                  <p class="list-work-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="list-work-item">
+              <a class="link-work-element" href="">
+                <img
+                  src="./images-2/port-8.jpg"
+                  alt="Growing Business"
+                  width="370"
+                />
+                <div class="gallery-element">
+                  <h2 class="list-work-name" lang="en">Growing Business</h2>
+                  <p class="list-work-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
-      </section>
+      </div>
     </main>
     <footer class="background-footer">
       <div class="container-footer">
@@ -235,26 +208,26 @@
           <b class="join-in">Присоединяйтесь</b>
           <!--Hero секция-->
           <ul class="social-link-list">
-            <div class="active-social-link">
-              <li>
-                <a href="" aria-label="Ссылка на Instagram"><img src="./images/instagram.svg" alt="instagram" /></a>
-              </li>
-            </div>
-            <div class="active-social-link">
-              <li>
-                <a href="" aria-label="Ссылка на Twitter"><img src="./images/twitter.svg" alt="Twitter" /></a>
-              </li>
-            </div>
-            <div class="active-social-link">
-              <li>
-                <a href="" aria-label="Ссылка на Facebook"><img src="./images/facebook.svg" alt="Facebook" /></a>
-              </li>
-            </div>
-            <div class="active-social-link">
-              <li>
-                <a href="" aria-label="Ссылка на LinkedIn"><img src="./images/linkedin.svg" alt="LinkedIn" /></a>
-              </li>
-            </div>
+            <li class="active-social-link">
+              <a href="" aria-label="Ссылка на Instagram"
+                ><img src="./images/instagram.svg" alt="instagram"
+              /></a>
+            </li>
+            <li class="active-social-link">
+              <a href="" aria-label="Ссылка на Twitter"
+                ><img src="./images/twitter.svg" alt="Twitter"
+              /></a>
+            </li>
+            <li class="active-social-link">
+              <a href="" aria-label="Ссылка на Facebook"
+                ><img src="./images/facebook.svg" alt="Facebook"
+              /></a>
+            </li>
+            <li class="active-social-link">
+              <a href="" aria-label="Ссылка на LinkedIn"
+                ><img src="./images/linkedin.svg" alt="LinkedIn"
+              /></a>
+            </li>
           </ul>
         </div>
       </div>
