--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   </head>
   <body>
     <header class="header container">
-      <a class="logo" href="/"> <span class="web">Web </span>Studio </a>
+      <a class="logo" href="/"> <span class="web">Web</span>Studio </a>
       <nav>
-        <ul>
+        <ul class="nav-list-items">
           <li class="nav-element-1">
-            <a class="nav-list-1" href="./index.html">Студия</a>
+            <a class="nav-list" href="./index.html">Студия</a>
           </li>
           <li class="nav-element-2">
-            <a class="nav-list" href="./portfolio.html">Портфолио</a>
+            <a class="nav-list-2" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-element-3">
             <a class="nav-list" href="">Контакты</a>
@@ -121,11 +121,9 @@
                 width="370"
                 height="294"
               />
-              <div class="text-main-services">
-                <h3 class="main-services">
-                  Десктопные приложения
-                </h3>
-              </div>
+              <h3 class="main-services">
+                Десктопные приложения
+              </h3>
             </li>
             <li class="main-services-list">
               <img
@@ -134,9 +132,7 @@
                 width="370"
                 height="294"
               />
-              <div class="text-main-services">
-                <h3 class="main-services">Мобильные приложения</h3>
-              </div>
+              <h3 class="main-services">Мобильные приложения</h3>
             </li>
             <li class="main-services-list">
               <img
@@ -145,11 +141,9 @@
                 width="370"
                 height="294"
               />
-              <div class="text-main-services">
-                <h3 class="main-services">
-                  Дизайнерские решения
-                </h3>
-              </div>
+              <h3 class="main-services">
+                Дизайнерские решения
+              </h3>
             </li>
           </ul>
         </div>
@@ -400,7 +394,9 @@
     <footer class="background-footer">
       <div class="container-footer">
         <div class="address-item">
-          <a class="logo-2" href="/"> <span class="web">Web</span>Studio </a>
+          <a class="logo-2" href="./index.html">
+            <span class="web">Web</span>Studio
+          </a>
           <address class="address-block">
             <p class="address">г. Киев, пр-т Леси Украинки,26</p>
             <ul class="contacts-footer-conteiner">
